streamlined all code
