# product-api/handlers/get.go
@@ -10,12 +10,50 @@ import (
 // responses:
 // 	200: productsResponse
 
-// GetProducts returns the products from the data store
-func (p *Products) GetProducts(w http.ResponseWriter, r *http.Request) {
-	p.logger.Println("Handle GET Products")
-	lp := data.GetProducts()
-	err := lp.ToJSON(w)
+// ListAll handles GET requests and returns all current products
+func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
+	p.l.Println("Handle GET Products")
+	products := data.GetProducts()
+	err := products.ToJSON(w)
 	if err != nil {
-		http.Error(w, "Unable to marshal json", http.StatusInternalServerError)
+		p.l.Println("[ERROR] serializing product", err)
+	}
+}
+
+// swagger:route GET /products/{id} products listSingle
+// Returns a single product
+// responses:
+// 	200: productResponse
+// 	404: errorResponse
+
+// ListSingle handles GET Requests
+func (p *Products) ListSingle(w http.ResponseWriter, r *http.Request) {
+	id := getProductID(r)
+
+	p.l.Println("[DEBUG] get record id", id)
+
+	prod, err := data.GetProductById(id)
+
+	switch err {
+	case nil:
+
+	case data.ErrProductNotFound:
+		p.l.Println("[ERROR] fetching product", err)
+
+		w.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, w)
+		return
+
+	default:
+		p.l.Println("[ERROR] fetching product", err)
+
+		w.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, w)
+		return
+	}
+
+	err = data.ToJSON(prod, w)
+	if err != nil {
+		p.l.Println("[ERROR] serializing product", err)
 	}
 }
