# product-api/handlers/put.go
@@ -3,9 +3,6 @@ package handlers
 import (
 	"net/http"
 	"product-api/data"
-	"strconv"
-
-	"github.com/gorilla/mux"
 )
 
 // swagger:route PUT /products/{id} updateProduct
@@ -13,31 +10,21 @@ import (
 // responses:
 //	201: noContent
 
-// UpdateProducts updates a product in the data store
-func (p *Products) UpdateProducts(w http.ResponseWriter, r *http.Request) {
-	vars := mux.Vars(r)
-
-	id, err := strconv.Atoi(vars["id"])
-
-	if err != nil {
-		http.Error(w, "Unable to convert id", http.StatusBadRequest)
-		return
-	}
-
-	p.logger.Println("Handle PUT Product: ", id)
-
+// Update updates a product in the data store
+func (p *Products) Update(w http.ResponseWriter, r *http.Request) {
+	p.l.Println("[DEBUG] getting product from context")
 	prod := r.Context().Value(KeyProduct{}).(*data.Product)
+	p.l.Println("[DEBUG] updating record with id", prod.ID)
 
-	err = data.UpdateProduct(id, prod)
+	err := data.UpdateProduct(prod)
 
 	if err == data.ErrProductNotFound {
-		http.Error(w, "Product not found", http.StatusNotFound)
+		p.l.Println("[ERROR] product not found", err)
+
+		w.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, w)
 		return
 	}
 
-	if err != nil {
-		http.Error(w, "Product not found", http.StatusInternalServerError)
-		return
-	}
-
+	w.WriteHeader(http.StatusNoContent)
 }
