# product-api/swagger.yaml
@@ -2,32 +2,58 @@ basePath: /
 consumes:
     - application/json
 definitions:
+    GenericError:
+        properties:
+            message:
+                type: string
+                x-go-name: Message
+        type: object
+        x-go-package: product-api/handlers
     Product:
         description: Product defines the structure for an API product
         properties:
             description:
+                description: the description for this product
                 type: string
                 x-go-name: Description
             id:
-                description: the id for this user
+                description: the id for this product
                 format: int64
                 minimum: 1
                 type: integer
                 x-go-name: ID
             name:
+                description: the name of this product
                 type: string
                 x-go-name: Name
             price:
+                description: the price for this product
                 format: float
+                minimum: 0.01
                 type: number
                 x-go-name: Price
             sku:
+                description: the SKU for this product
+                pattern: '[a-z]+-[a-z]+-[a-z]+'
                 type: string
                 x-go-name: SKU
         required:
             - id
+            - name
+            - description
+            - price
+            - sku
         type: object
         x-go-package: product-api/data
+    ValidationError:
+        properties:
+            messages:
+                items:
+                    type: string
+                type: array
+                x-go-name: Messages
+        type: object
+        x-go-package: product-api/handlers
 info:
     description: Documentation for Product API
     title: of Product API
@@ -54,6 +80,10 @@ paths:
             responses:
                 "204":
                     $ref: '#/responses/created'
+                "422":
+                    $ref: '#/responses/errorValidation'
+                "501":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
     /products/{id}:
@@ -69,6 +99,20 @@ paths:
             responses:
                 "201":
                     $ref: '#/responses/noContent'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "501":
+                    $ref: '#/responses/errorResponse'
+            tags:
+                - products
+        get:
+            description: Returns a single product
+            operationId: listSingle
+            responses:
+                "200":
+                    $ref: '#/responses/productResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
         put:
@@ -88,10 +132,18 @@ produces:
 responses:
     created:
         description: ""
+    errorResponse:
+        description: ""
+        schema:
+            $ref: '#/definitions/GenericError'
+    errorValidation:
+        description: ""
+        schema:
+            $ref: '#/definitions/ValidationError'
     noContent:
         description: ""
     productsResponse:
-        description: A list of products returns in the response
+        description: ""
         schema:
             items:
                 $ref: '#/definitions/Product'
